--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>User Authentication</title>
+    <title>PLNR U</title>
 </head>
 <body>
     <h1>Login</h1>
