--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <h1>Create Account</h1>
 <form action="/signup" method="post">
     Username: <input type="text" name="username" required><br>
+    Password: <input type="password" name="password" required><br>
     First Name: <input type="text" name="first_name" required><br>
     Last Name: <input type="text" name="last_name" required><br>
     College: <input type="text" name="college" required><br>
